40_deployment_sentry_server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-server
  namespace: sentry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry-server
      component: services
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: sentry-server
        component: services
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: sentry
          persistentVolumeClaim:
            claimName: sentry

      containers:
      - name: sentry-server
        image: sentry:latest
        imagePullPolicy: Always
        ports:
        - name: sentry-server
          containerPort: 9000
        volumeMounts:
         - name: sentry
           mountPath: /opt/sentry
        readinessProbe:
          httpGet:
            path: /auth/login/sentry/
            port: 9000
          initialDelaySeconds: 150
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /auth/login/sentry/
            port: 9000
          initialDelaySeconds: 150
          periodSeconds: 10
