41_deployment_sentry_cron.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-cron
  namespace: sentry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentry-cron
      component: services
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: sentry-cron
        component: services
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
        - name: sentry
          persistentVolumeClaim:
            claimName: sentry

      containers:
      - name: sentry-cron
        image: sentry:latest
        imagePullPolicy: Always
        ports:
        - name: sentry-cron
          containerPort: 9000
        volumeMounts:
         - name: sentry
           mountPath: /opt/sentry
        lifecycle:
            postStart:
              exec:
                command: ["/usr/local/bin/sentry", "run", "cron"]
