80_svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: sentry
  namespace: sentry
  labels:
    app: sentry
    component: services
spec:
  ports:
  - name: sentry
    port: 9000
  selector:
    app: sentry
    component: services
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: sentry-redis
  namespace: sentry
  labels:
    app: redis
    component: cache
spec:
  ports:
  - name: redis
    port: 6379
  selector:
    app: redis
    component: cache
  type: NodePort

---
kind: Service
apiVersion: v1
metadata:
  name: sentry-postgresql
  namespace: sentry
  labels:
    app: postgresql
    component: database
spec:
  ports:
  - name: postgresql
    port: 5432
  selector:
    app: postgresql
    component: database
  type: NodePort
