90_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sentry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sentry.vorwaerts.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentry-server
          servicePort: 9000
